# ShareBot

./: .gitignore  README.md  docker-compose.yml
engine/: .dockerignore  .gitignore  Dockerfile  README.md  config.py  main.py  pyproject.toml
engine/doc_converter/: __init__.py  doc_converter.py
engine/group_ragger/: group_ragger.py  utils.py
engine/group_ragger/embedder/: __init__.py  base_embedder.py  openai_embedder.py
engine/group_ragger/generator/: __init__.py  base.py  claude_generator.py  gemini_generator.py  openai_generator.py
engine/group_ragger/rag_checker/: __init__.py  base.py  gemini_checker.py  openai_checker.py
engine/group_ragger/schema/: __init__.py  message.py  rag_check.py  vector.py
engine/group_ragger/vector_store/: __init__.py  base.py  qdrant_vector_store.py
engine/qdrant/: run_docker.sh
engine/scripts/: build_image.sh  create_collection.py  run_container.sh
engine/tests/: test_doc_converter.py
gossipbao-back/: Dockerfile  package.json
gossipbao-back/cicd/: deploy_dev.sh
gossipbao-back/migrations/: 20221200000001_create_video.ts  20221202000000_create_group.ts  20240313055538_create_group_tag.ts  20240314080213_create_x_group_group_tag.ts  20240321075332_create_group_secret.ts
gossipbao-front/: .gitignore  package-lock.json  package.json  pnpm-lock.yaml
scripts/: load_all_tar.sh  save_all_image.sh
sharebot-back/: .dockerignore  .eslintrc.json  .gitignore  Dockerfile  README.md  package.json  pnpm-lock.yaml
sharebot-back/src/: env.ts  (+4 more)
sharebot-front/: .dockerignore  Dockerfile  README.md  package.json  pnpm-lock.yaml
(+366 files in other folders)
