[tool.poetry]
name = "sharebot-engine"
version = "0.1.0"
description = ""
authors = ["5yearsKim <hypothesis22@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
langchain = "^0.1.11"
openai = "^1.13.3"
langchain-openai = "^0.0.8"
uvicorn = "^0.27.1"
google-generativeai = "^0.4.0"
anthropic = "^0.18.1"
requests = "^2.31.0"
sseclient-py = "^1.8.0"
qdrant-client = "^1.12.0"
logging = "^0.4.9.6"
fastapi = {extras = ["standard"], version = "^0.115.3"}
pymupdf = "^1.24.12"


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
black = "^24.10.0"
isort = "^5.13.2"
streamlit = "^1.39.0"
types-requests = "^2.32.0.20241016"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
